--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node_modules/.bin/webpack serve --config-name demo --open",
+    "dev": "node_modules/.bin/webpack serve --config webpack.dev.js --open",
     "watch": "node_modules/.bin/webpack --watch",
-    "build": "node_modules/.bin/webpack"
+    "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
     "@popperjs/core": "2.9.2",
@@ -28,9 +28,11 @@
     "postcss-loader": "^6.1.1",
     "style-loader": "^3.0.0",
     "webpack": "^5.42.1",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-manifest-plugin": "^3.1.1",
+    "webpack-merge": "^5.8.0",
     "webpack-nano": "^1.1.1"
   }
 }
