--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@popperjs/core": "2.9.2",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
@@ -19,14 +20,20 @@
     "@babel/preset-env": "^7.14.7",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
+    "boxicons": "^2.0.7",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "favicons": "^6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
+    "glob": "^7.1.7",
     "html-webpack-plugin": "^5.3.2",
     "lodash": "^4.17.21",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^6.1.1",
+    "purgecss-webpack-plugin": "^4.0.3",
     "style-loader": "^3.0.0",
+    "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.42.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
