--- a/package.json
+++ b/package.json
@@ -28,11 +28,17 @@
     "favicons-webpack-plugin": "^5.0.2",
     "glob": "^7.1.7",
     "html-webpack-plugin": "^5.3.2",
+    "image-minimizer-webpack-plugin": "^2.2.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
     "lodash": "^4.17.21",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^6.1.1",
     "purgecss-webpack-plugin": "^4.0.3",
     "style-loader": "^3.0.0",
+    "svgo": "^2.3.1",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.42.1",
     "webpack-bundle-analyzer": "^4.4.2",
